# coolify-mcp

./: README.md  openapi.yaml  pyproject.toml  server.py
